fix: antd table no data dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -208,3 +208,11 @@
 .dark .ant-select-item-option-selected {
   background-color: rgba(255, 255, 255, 0.2) !important;
 }
+
+.dark .ant-empty-image > svg path {
+  fill: var(--card);
+}
+
+.dark .ant-empty-image > svg ellipse {
+  fill: rgba(255, 255, 255, 0.2) !important;
+}
